<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uottawa.eecs.simplecalculator.MainActivity"
    style="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:id="@+id/resultText"
            android:gravity="center_vertical|center_horizontal"
            android:height="25dp"
            android:hint="@string/text_hint" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/buttonRow01"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_7"
                android:id="@+id/button07"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_8"
                android:id="@+id/button08"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_9"
                android:id="@+id/button09"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_div"
                android:id="@+id/buttonDiv"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/buttonRow02"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_4"
                android:id="@+id/button04"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_5"
                android:id="@+id/button05"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_6"
                android:id="@+id/button06"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_mul"
                android:id="@+id/buttonMult"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/buttonRow03"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_1"
                android:id="@+id/button01"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_2"
                android:id="@+id/button02"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_3"
                android:id="@+id/button03"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_add"
                android:id="@+id/buttonAdd"
                android:layout_weight="1"
                android:nestedScrollingEnabled="true"
                android:onClick="onClickFunctionButton" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/buttonRow04"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_ce"
                android:id="@+id/buttonCE"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_0"
                android:id="@+id/button00"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_dot"
                android:id="@+id/buttonDot"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_sub"
                android:id="@+id/buttonSub"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton" />
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/button_eq"
            android:id="@+id/buttonEq"
            android:layout_weight="1"
            android:onClick="onClickFunctionButton" />
    </LinearLayout>

</RelativeLayout>
